--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
   --header-height: 3.5rem;
 
   /*========== Colors ==========*/
-  --first-color: hsl(354, 78%, 60%);
+  --first-color: hsl(263, 78%, 60%);
   --button-color: hsl(0, 0%, 17%);
   --button-color-alt: hsl(0, 0%, 21%);
   --card-color: hsl(0, 0%, 90%);
@@ -113,10 +113,10 @@ button {
 /*=============== THEME ===============*/
 /*========== Variables Dark theme ==========*/
 body.dark-theme {
-  --first-color: hsl(182, 53%, 74%);
-  --button-color: hsl(246, 16%, 12%);
+  --first-color: hsl(0, 53%, 74%);
+  --button-color: hsl(240, 1%, 26%);
   --button-color-alt: hsl(0, 0%, 28%);
-  --card-color: hsla(246, 16%, 5%, .5);
+  --card-color: hsla(240, 1%, 25%, 0.5);
   --title-color: hsl(0, 0%, 95%);
   --text-color: hsl(0, 0%, 75%);
   --body-color: hsl(249, 19%, 14%);
@@ -777,7 +777,7 @@ body.dark-theme {
 }
 
 .footer__container {
-  row-gap: 2rem;
+  row-gap: 1rem;
   border-bottom: 1px solid var(--border-color);
   padding-bottom: 3rem;
 }
